Changelog
=========


2.0.3 (unreleased)
------------------

- Nothing changed yet.


2.0.2 (2012-01-18)
------------------

- Add AllUsersAndInboxesVocabulary.
  [jone]

- Adjust the collation settings for oracle connections (changed rom BINARY_CI to GERMAN_CI):
  to avoid problems with umlaut sorting.
  Issue #1328 NLS_SORT Parameter umstellen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1328
  [phgross]

- Fixed autocomplete_widget test:
  add a Mocked Indexer for the new containing_dossier indexer, to avoid a dependency.
  [phgross]

- Transporter: store original intid in annotations when transporting an object.
  [jone]

- Implement sort_dicts used for faster custom_sort methods for sorting on the readable fullname.
  Issue #1325 og.tabbedview: custom_sort methoden performanter implementieren.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1325
  [phgross]


2.0.1 (2011-12-20)
------------------

- Register PrettyPrinter from transmogrifier.
  [jone]


2.0 (2011-11-17)
----------------

- Made ldapsource section behave more robust if ldap plugin can't be found
  [lgraf]

- Avoid trying to traverse a Z3CFormValidation object in remote_request()
  [lgraf]

- Added LDAP source for `ldap_gds_public_externe` to be imported upon LDAP sync
  [lgraf]

- Made is_user_in_inbox_group method safer, he can now handle request with a id from a not enabled client.
  [phgross]

- Added is_user_in_inbox_group method to the contact_information utility.
  Used by different views and actions for check if the user has access to the inbox.
  [phgross]

2.0b18 (2011-10-04)
-------------------

- Fixed dictstorage writing/reading in the import stamp functionality.
  Implements special fake context, wich allows to get the ftw.dictstorage.sql.DictStorage.
  [phgross]

- Added (verbose) logging for OGDS import stamp functionality
  [lgraf]


2.0b17 (2011-10-04)
-------------------
